--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -23,7 +23,7 @@
 
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands ShowLastSeparator="False">
-            <Button Content="Meine Vorlagen"></Button>
+            <Button Content="Meine Vorlagen" Command="{Binding EditTemplatesCommand}"></Button>
         </controls:WindowCommands>
     </controls:MetroWindow.RightWindowCommands>
     
