--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -13,7 +13,7 @@
     BorderThickness="1"
     Language="de-CH"
     Title="Auftrag bearbeiten"
-    Width="550" MinWidth="550" Height="600" MinHeight="600" MaxHeight="600">
+    Width="750" MinWidth="750" Height="600" MinHeight="600" MaxHeight="600">
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -73,28 +73,34 @@
 
             <TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
                 <TabItem Header="Offerten">
-                    <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OfferList}" BorderThickness="0">
-                        <ListView.Resources>
-                            <Style TargetType="GridViewColumnHeader">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                            </Style>
-                        </ListView.Resources>
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Offerten Nummer" DisplayMemberBinding="{Binding OfferNumber}" />
-                                <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
-                                <GridViewColumn Header="Dokumentenlink">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
-                                                    Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                                                    CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <DockPanel>
+                        <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OfferList}" BorderThickness="0" DockPanel.Dock="Top">
+                            <ListView.Resources>
+                                <Style TargetType="GridViewColumnHeader">
+                                    <Setter Property="Visibility" Value="Collapsed" />
+                                </Style>
+                            </ListView.Resources>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Offerten Nummer" DisplayMemberBinding="{Binding OfferNumber}" />
+                                    <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
+                                    <GridViewColumn Header="Dokumentenlink">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
+                                                            Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                                                            CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
+                                Width="40" Height="40" BorderThickness="0" ToolTip="Neue Offerte" Command="{Binding NewOfferCommand}">
+                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
+                        </Button>
+                    </DockPanel>
                 </TabItem>
                 <TabItem Header="Auftragsbestätigung" controls:ControlsHelper.HeaderFontSize="24">
                     <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OrderConfirmationList}" BorderThickness="0">
@@ -121,28 +127,35 @@
                     </ListView>
                 </TabItem>
                 <TabItem Header="Rechnungen" controls:ControlsHelper.HeaderFontSize="24">
-                    <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding InvoiceList}" BorderThickness="0">
-                        <ListView.Resources>
-                            <Style TargetType="GridViewColumnHeader">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                            </Style>
-                        </ListView.Resources>
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Rechnungsnummer" DisplayMemberBinding="{Binding InvoiceNumber}" />
-                                <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
-                                <GridViewColumn Header="Dokumentenlink">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
-                                                    Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                                                    CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen" />
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <DockPanel>
+                        <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding InvoiceList}" BorderThickness="0" DockPanel.Dock="Top">
+                            <ListView.Resources>
+                                <Style TargetType="GridViewColumnHeader">
+                                    <Setter Property="Visibility" Value="Collapsed" />
+                                </Style>
+                            </ListView.Resources>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Rechnungsnummer" DisplayMemberBinding="{Binding InvoiceNumber}" />
+                                    <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
+                                    <GridViewColumn Header="Betrag" DisplayMemberBinding="{Binding Amount, StringFormat=C}" />
+                                    <GridViewColumn Header="Dokumentenlink">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
+                                                        Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                                                        CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
+                                Width="40" Height="40" BorderThickness="0" ToolTip="Neue Rechnung" Command="{Binding NewInvoiceCommand}">
+                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
+                        </Button>
+                    </DockPanel>
                 </TabItem>
             </TabControl>
             
