--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -29,7 +29,9 @@
                     <x:Type TypeName="types:State"/>
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
+            <BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
         </ResourceDictionary>
+        
     </controls:MetroWindow.Resources>
 
     <DockPanel>
@@ -72,7 +74,7 @@
                      Text="{Binding StateModificationDate, StringFormat={}{0:dd.MM.yyyy}, Mode=OneWay}" IsReadOnly="True" IsEnabled="False" />
 
             <TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" controls:TabControlHelper.IsUnderlined="True" controls:ControlsHelper.HeaderFontSize="24">
-                <TabItem Header="Offerten">
+                <TabItem Header="Offerten" controls:ControlsHelper.HeaderFontSize="24">
                     <DockPanel>
                         <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OfferList}" BorderThickness="0" DockPanel.Dock="Top">
                             <ListView.Resources>
@@ -103,32 +105,40 @@
                     </DockPanel>
                 </TabItem>
                 <TabItem Header="Auftragsbestätigung" controls:ControlsHelper.HeaderFontSize="24">
-                    <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OrderConfirmationList}" BorderThickness="0">
-                        <ListView.Resources>
-                            <Style TargetType="GridViewColumnHeader">
-                                <Setter Property="Visibility" Value="Collapsed" />
-                            </Style>
-                        </ListView.Resources>
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Auftragsbestätigungsnummer" DisplayMemberBinding="{Binding OrderConfNumber}" />
-                                <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
-                                <GridViewColumn Header="Dokumentenlink">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
-                                                    Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
-                                                    CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <DockPanel>
+                        <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding OrderConfirmationList}" BorderThickness="0"
+                                  DockPanel.Dock="Top">
+                            <ListView.Resources>
+                                <Style TargetType="GridViewColumnHeader">
+                                    <Setter Property="Visibility" Value="Collapsed" />
+                                </Style>
+                            </ListView.Resources>
+                            <ListView.View>
+                                <GridView>
+                                    <GridViewColumn Header="Auftragsbestätigungsnummer" DisplayMemberBinding="{Binding OrderConfNumber}" />
+                                    <GridViewColumn Header="Ausstellungsdatum" DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
+                                    <GridViewColumn Header="Dokumentenlink">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
+                                                        Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                                                        CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen"/>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
+                        <Button DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}"
+                                Width="40" Height="40" BorderThickness="0" ToolTip="Neue Auftragsbestätigung" Command="{Binding NewOrderConfirmationCommand}">
+                            <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
+                        </Button>
+                    </DockPanel>
                 </TabItem>
                 <TabItem Header="Rechnungen" controls:ControlsHelper.HeaderFontSize="24">
                     <DockPanel>
-                        <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding InvoiceList}" BorderThickness="0" DockPanel.Dock="Top">
+                        <ListView Style="{StaticResource ShowMessageWhenEmpty}" ItemsSource="{Binding InvoiceList}" BorderThickness="0"
+                                  DockPanel.Dock="Top">
                             <ListView.Resources>
                                 <Style TargetType="GridViewColumnHeader">
                                     <Setter Property="Visibility" Value="Collapsed" />
@@ -145,6 +155,22 @@
                                                 <Button Style="{StaticResource LinkButton}" Content="{Binding Document.RelativePath}"
                                                         Command="{Binding DataContext.OpenDocumentCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
                                                         CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen" />
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
+                                    <GridViewColumn Header="Ist bezahlt">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <StackPanel>
+                                                    <Button Visibility="{Binding IsNotPayed, Converter={StaticResource BoolToVisConverter}}"
+                                                            HorizontalAlignment="Center" Content="Als bezahlt markieren" 
+                                                            Command="{Binding DataContext.InvoicePayedCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}"
+                                                            CommandParameter="{Binding}"/>
+                                                    <Canvas Visibility="{Binding IsPayed, Converter={StaticResource BoolToVisConverter}}" Margin="0,-9,0,0"
+                                                            HorizontalAlignment="Center">
+                                                        <iconPacks:PackIconMaterial Kind="Check" Height="18" Width="18" />
+                                                    </Canvas>
+                                                </StackPanel>
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
